# aitop

./: Cargo.toml  LICENSE  README.md  README.zh-CN.md  README.zh-TW.md
.github/workflows/: ci.yml
locales/: app.yml
src/: i18n.rs  lang.rs  main.rs
src/providers/: claude.rs  codex.rs  copilot.rs  gemini.rs  kiro.rs  mod.rs  openrouter.rs
src/ui/: mod.rs
